[package]
name = "j2ds"
version = "0.1.0"
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
description = "A small collection of data structures not found in the standard library"
license = "MIT"
license-file = "COPYING"
repository = "https://github.com/Nitori-/j2ds"
documentation = "https://docs.rs/j2ds"

[dependencies]
